Add new files and updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,17 @@
 <footer>
-    <div class="row">
-        <div class="col-12">
-            <p>CopyRight - BiteCal</p>
-            <p>Email - kwen0730@gmail.com</p>
+    <div class="container">
+        <div class="footer-section">
+            <p class="footer-title">About BiteCal</p>
+            <p class="footer-description">
+                BiteCal is an intuitive platform that allows users to log their daily meals, track dietary habits, and gain insights into their eating patterns over time. <br>
+                Our mission is to help users make healthier food choices through meal tracking and evaluation.
+            </p>
+        </div>
+        <div class="footer-section">
+            <p class="footer-title">Contact Us</p>
+            <p class="footer-description">
+                <i class="fas fa-envelope"></i> <a href="mailto:kwen0730@gmail.com">kwen0730@gmail.com</a>
+            </p>
         </div>
     </div>
 </footer>
