--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,9 @@
     </main>
     {% include footer.html %}
     <script src="{{ '/assets/js/index.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/sidebar.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/calendar.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/search.js' | relative_url }}"></script>
+
 </body>
 </html>
