--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -23,13 +23,15 @@
     <button onclick="search()">Search</button>
   </div>
 
-  {%- if titles_size > 0 -%}
   <div class="sideNav">
-    {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
-    "path", path | first -%} {%- if my_page.title -%}
-    <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-    {%- endif -%} {%- endfor -%}
-  </div>
+    {%- assign sorted_pages = page_paths | map: 'path' | map: 'order' | sort -%}
+    {%- for path in sorted_pages -%}
+      {%- assign my_page = site.pages | where: "path", path | first -%}
+      {%- if my_page.title -%}
+        <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+      {%- endif -%}
+    {%- endfor -%}
+  </div>  
   <div class="newSideNav" id="newSideNav">
     {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
     "path", path | first -%} {%- if my_page.title -%}
