--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -23,10 +23,11 @@
     <button onclick="search()">Search</button>
   </div>
 
+  {%- if titles_size > 0 -%}
   <div class="sideNav">
-    {%- assign sorted_pages = page_paths | map: 'path' | map: 'order' | sort -%}
-    {%- for path in sorted_pages -%}
-      {%- assign my_page = site.pages | where: "path", path | first -%}
+    {%- assign sorted_pages = page_paths | sort: 'order' -%}
+    {%- for page in sorted_pages -%}
+      {%- assign my_page = site.pages | where: "path", page.path | first -%}
       {%- if my_page.title -%}
         <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
       {%- endif -%}
