--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -25,14 +25,11 @@
 
   {%- if titles_size > 0 -%}
   <div class="sideNav">
-    {%- assign sorted_pages = page_paths | sort: 'order' -%}
-    {%- for page in sorted_pages -%}
-      {%- assign my_page = site.pages | where: "path", page.path | first -%}
-      {%- if my_page.title -%}
-        <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-      {%- endif -%}
-    {%- endfor -%}
-  </div>  
+    {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
+    "path", path | first -%} {%- if my_page.title -%}
+    <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+    {%- endif -%} {%- endfor -%}
+  </div>
   <div class="newSideNav" id="newSideNav">
     {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
     "path", path | first -%} {%- if my_page.title -%}
