--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -24,7 +24,7 @@
   </div>
 
   {%- if titles_size > 0 -%}
-  <div class="sideNav">
+  <div class="sideNav" id="sideNav">
     {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
     "path", path | first -%} {%- if my_page.title -%}
     <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
