--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -25,7 +25,7 @@
 
   {%- if titles_size > 0 -%}
   <div class="sideNav" id="sideNav">
-    {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
+    {%- for path in page_paths -%} {%- assign my_page = site.pages | sort: 'order' | where:
     "path", path | first -%} {%- if my_page.title -%}
     <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
     {%- endif -%} {%- endfor -%}
