--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -24,11 +24,13 @@
   </div>
 
   {%- if titles_size > 0 -%}
-  <div class="sideNav" id="sideNav">
-    {%- for path in page_paths -%} {%- assign my_page = site.pages | sort: 'order' | where:
-    "path", path | first -%} {%- if my_page.title -%}
-    <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-    {%- endif -%} {%- endfor -%}
+  <div class="sideNav">
+    {%- assign sorted_pages = site.pages | sort: 'order' -%}
+    {%- for my_page in sorted_pages -%}
+      {%- if my_page.title -%}
+        <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+      {%- endif -%}
+    {%- endfor -%}
   </div>
   <div class="newSideNav" id="newSideNav">
     {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
